k8s/api_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
      name: api
    spec:
      containers:
        - env:
            - name: MONGODB_DATABASE
              value: sorry-cypress
            - name: MONGODB_URI
              value: mongodb://mongo-service:27017
          image: agoldis/sorry-cypress-api:latest
          imagePullPolicy: 'Always'
          name: api
          ports:
            - containerPort: 4000
          resources:
            requests:
              memory: '128M'
              cpu: 0.2
            limits:
              memory: '512M'
              cpu: 0.5
      restartPolicy: Always
      serviceAccountName: ''
      volumes: null
