k8s/director_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: director
spec:
  replicas: 1
  selector:
    matchLabels:
      app: director
  template:
    metadata:
      labels:
        app: director
      name: director
    spec:
      containers:
        - env:
            - name: DASHBOARD_URL
              value: '/'
            - name: EXECUTION_DRIVER
              value: ../execution/mongo/driver
            - name: MONGODB_DATABASE
              value: sorry-cypress
            - name: MONGODB_URI
              value: mongodb://mongo-service:27017
            - name: SCREENSHOTS_DRIVER
              value: ../screenshots/s3.driver
            - name: S3_BUCKET
              value: 'your-bucket'
            - name: S3_REGION
              value: your-region
            - name: S3_ACL
              value: 'public-read'
            - name: AWS_ACCESS_KEY_ID # you should use secretes for these, this is for testing
              valueFrom:
                secretKeyRef:
                  name: cypress-secrets
                  key: AWS_ACCESS_KEY_ID
            - name: AWS_SECRET_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  name: cypress-secrets
                  key: AWS_SECRET_ACCESS_KEY
          image: agoldis/sorry-cypress-director:latest
          imagePullPolicy: 'Always'
          name: director
          ports:
            - containerPort: 1234
          resources:
            requests:
              memory: '128M'
              cpu: 0.2
            limits:
              memory: '512M'
              cpu: 0.5
      restartPolicy: Always
      serviceAccountName: ''
      volumes: null
