k8s/mongo_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      name: mongo
      labels:
        app: mongo
    spec:
      containers:
        - image: mongo:4.2
          imagePullPolicy: 'Always'
          name: mongo
          ports:
            - containerPort: 27017
          readinessProbe:
            exec:
              command:
                - mongo
                - --eval
                - db.adminCommand('ping')
            failureThreshold: 6
            initialDelaySeconds: 360
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            requests:
              memory: '128M'
              cpu: 0.2
            limits:
              memory: '512M'
              cpu: 0.5
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      restartPolicy: Always
      serviceAccountName: ''
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-storage-claim
