k8s/api_service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  ports:
    - name: '4000'
      port: 4000
      targetPort: 4000
  selector:
    app: api
