k8s/dashboard_service.yml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
spec:
  ports:
    - name: '8080'
      port: 8080
      targetPort: 8080
  selector:
    app: dashboard
