k8s/director_service.yml
apiVersion: v1
kind: Service
metadata:
  name: director-service
spec:
  type: NodePort
  ports:
    - name: '1234'
      port: 1234
      targetPort: 1234
      nodePort: 30007
  selector:
    app: director
