k8s/mongo_service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  ports:
    - name: '27017'
      port: 27017
      targetPort: 27017
  selector:
    app: mongo
